Added a ton of cool stuff, added database to assest, added data accessors, and a helper

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:id="@+id/nav_to_search"
+        android:onClick="search"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
