Added basic navigation between all screens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nav_to_inventory"
-        android:onClick="sendMessage"
+        android:onClick="navigateInv"
         android:layout_below="@+id/nav_to_search"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nav_to_shoppinglist"
+        android:onClick="navigateShop"
         android:layout_below="@+id/nav_to_inventory"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:id="@+id/nav_to_search"
-        android:onClick="search"
+        android:onClick="navigateSearch"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
