--- a/app/src/main/res/layout/activity_shoppinglist.xml
+++ b/app/src/main/res/layout/activity_shoppinglist.xml
@@ -10,4 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.uri.team21.culinarycommrade.shoppinglist">
 
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 </RelativeLayout>
