Added functionality for shopping list and inventory (not fully functional yet).

--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -10,20 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.uri.team21.culinarycommrade.inventory">
 
-    <TextView
-        android:text="This is the inventory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="134dp"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="103dp" />
-
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
