--- a/app/src/main/res/layout/activity_shoppinglist.xml
+++ b/app/src/main/res/layout/activity_shoppinglist.xml
@@ -14,7 +14,6 @@
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
