--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,23 +16,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/nav_to_inventory"
         android:onClick="navigateInv"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/nav_to_search"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:text="Manage shopping list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nav_to_shoppinglist"
-        android:onClick="navigateShop"
-        android:layout_below="@+id/nav_to_inventory"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        style="@android:style/Widget.Button" />
 
     <Button
         android:text="Search"
@@ -44,6 +33,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        style="@android:style/Widget.Button" />
+
+    <Button
+        android:text="Manage shopping list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nav_to_shoppinglist"
+        android:onClick="navigateShop"
+        android:layout_below="@+id/nav_to_inventory"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        style="@android:style/Widget.Button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
