--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -31,7 +31,7 @@
         android:layout_alignParentStart="true" />
 
     <ListView
-        android:id="@+id/list2"
+        android:id="@+id/list_recipe"
         android:layout_width="368dp"
         android:layout_height="291dp"
         tools:layout_editor_absoluteX="8dp"
