--- a/app/src/main/res/layout/ingredientlayout.xml
+++ b/app/src/main/res/layout/ingredientlayout.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/listy">
-
+    android:id="@+id/list">
     <TextView
         android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ingName" />
+        android:layout_width="106dp"
+        android:layout_height="44dp"
+        android:id="@+id/ingName"
+        android:layout_weight="1" />
 
     <Button
         android:text="Button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/inventBut" />
 
     <Button
         android:text="Button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/shopBut" />
 </LinearLayout>
