--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -30,15 +30,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
-        android:id="@+id/list_recipe"
-        android:layout_width="368dp"
-        android:layout_height="291dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="214dp"
+    <EditText
+        android:id="@+id/textDirections"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/list1"
+        android:ems="10"
+        android:inputType="textMultiLine" />
+
 </RelativeLayout>
