--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -23,14 +23,14 @@
     <ListView
         android:id="@+id/list1"
         android:layout_width="368dp"
-        android:layout_height="147dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="57dp"
-        android:layout_below="@+id/textView"
+        android:layout_height="250dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="57dp" />
 
-    <EditText
+    <TextView
         android:id="@+id/textDirections"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +40,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/list1"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+        android:text="TextView" />
 
 </RelativeLayout>
