--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,26 +16,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/nav_to_inventory"
         android:onClick="navigateInv"
+        android:layout_above="@+id/nav_to_shoppinglist"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/nav_to_search"
-        style="@android:style/Widget.Button" />
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Search"
+        android:text="Recipe Helper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
         android:id="@+id/nav_to_search"
         android:onClick="navigateSearch"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/nav_to_inventory"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        style="@android:style/Widget.Button" />
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="Manage shopping list"
@@ -43,11 +40,32 @@
         android:layout_height="wrap_content"
         android:id="@+id/nav_to_shoppinglist"
         android:onClick="navigateShop"
-        android:layout_below="@+id/nav_to_inventory"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        style="@android:style/Widget.Button"
+        android:layout_marginBottom="29dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Search For Recipe"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/Search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View"
+        android:layout_alignTop="@+id/autoCompleteTextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/autoCompleteTextView"
+        android:onClick="View"/>
 
 </RelativeLayout>
