Adds 70% functionality for buttons on ingredientView. I'll need to update the shoppinglist versions so they have support for displaying the recipe as well, and I suspect I'll need to mess with the icon specifics as well

--- a/app/src/main/res/layout/ingredientlayout.xml
+++ b/app/src/main/res/layout/ingredientlayout.xml
@@ -10,15 +10,15 @@
         android:id="@+id/ingName"
         android:layout_weight="1" />
 
-    <Button
-        android:text="Button"
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/inventBut" />
+        android:id="@+id/inventBut"
+        android:src="@drawable/addinventory" />
 
-    <Button
-        android:text="Button"
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/shopBut" />
+        android:id="@+id/shopBut"
+        android:src="@drawable/addshopping" />
 </LinearLayout>
