--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -15,14 +15,19 @@
         android:layout_width="169dp"
         android:layout_height="31dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textSize="20sp"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="16dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <ListView
         android:id="@+id/list1"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
